istio/traffic-management/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtual-service-all
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway/ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
      - destination:
          host: appdemo-svc.demo.svc.cluster.local
          subset: v1
        weight: 70
      - destination:
          host: appdemo-svc.demo.svc.cluster.local
          subset: v2
        weight: 30
